tests/bad_programs/type_errors/while_bool_and_str.nc
int main() {
    string s = "jklk";
    while (true && s) {
    }
    return 0;
}
